<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contenedor principal -->
    <LinearLayout
        android:id="@+id/contenedorPrincipal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_constraintBottom_toBottomOf="parent"
        android:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_dialog_tarjeta_sip"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tarjetasTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/tarjeta_sip"
            android:textAlignment="center"
            android:textSize="20sp" />

        <!-- Información del usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Número SIP -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellidos_nombre"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvApellidosNombreUsuario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_sip"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvNumeroSip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <!-- Digito de control -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digito_control"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvDigitoControl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <!-- Código de identificación territorial -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_identificacion_territorial"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvCodigoIdentificacionTerritorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <!-- Datos de identificación -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_identificacion"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvDatosIdentificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Código SNS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_sns"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvCodigoSns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <!-- Fecha de emisión -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_emision"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvFechaEmisionUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Fecha de caducidad -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_caducidad"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/editTextFechaCaducidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Teléfono de urgencias -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono_urgencias"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvTelefonoUrgencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </LinearLayout>

            <!-- Número de seguridad social -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_seguridad_social"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvNumeroSeguridadSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <!-- Centro médico -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centro_medico"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvCentroMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Médico asignado -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medico_asignado"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvMedicoAsignadoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Enfermera asignada -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enfermera_asignada"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvEnfermeraAsignadaUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Teléfonos de urgencias y cita previa -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Descripción estática -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefonos_urgencias_cita_previa"
                    android:textStyle="bold" />

                <!-- Campo de entrada para el usuario -->
                <EditText
                    android:id="@+id/tvTelefonosUrgenciasCitaPrevia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>